--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
       "@nestjs/common": "^7.0.0",
       "@nestjs/core": "^7.0.0",
       "@nestjs/platform-express": "^7.0.0",
+      "dotenv": "^8.2.0",
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
       "rimraf": "^3.0.2",
