--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
       "prebuild": "rimraf dist",
       "build": "nest build",
       "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-      "start": "ts-node src/index.ts",
+      "start": "ts-node src/main.ts",
       "start:dev": "nest start --watch",
       "start:debug": "nest start --debug --watch",
       "start:prod": "node dist/main",
@@ -24,6 +24,7 @@
       "@nestjs/common": "^7.0.0",
       "@nestjs/core": "^7.0.0",
       "@nestjs/platform-express": "^7.4.4",
+      "@nestjs/serve-static": "^2.1.3",
       "dotenv": "^8.2.0",
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
@@ -35,7 +36,7 @@
    "devDependencies": {
       "@nestjs/cli": "^7.0.0",
       "@nestjs/schematics": "^7.0.0",
-      "@nestjs/testing": "^7.0.0",
+      "@nestjs/testing": "^7.4.4",
       "@types/express": "^4.17.8",
       "@types/jest": "25.2.3",
       "@types/node": "^8.0.29",
