--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
       "@nestjs/core": "^7.0.0",
       "@nestjs/platform-express": "^7.4.4",
       "@nestjs/serve-static": "^2.1.3",
+      "@nestjs/swagger": "^4.6.1",
       "dotenv": "^8.2.0",
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
       "rimraf": "^3.0.2",
       "rxjs": "^6.5.4",
       "sequelize": "^6.3.4",
+      "swagger-ui-express": "^4.1.4",
       "typeorm": "0.2.25"
    },
    "devDependencies": {
